# hokusai-data-pipeline

./: .env.example  .env.production  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .wavemill-config.json  API_CONNECTIVITY_FIX_SUMMARY.md  API_KEY_IMPLEMENTATION_SUMMARY.md  API_PROXY_SOLUTION.md  ARTIFACT_STORAGE_IMPLEMENTATION.md  AUTHENTICATION_SOLUTION.md  AUTH_SERVICE_INTEGRATION_PLAN.md  AUTH_TEAM_ISSUE_REPORT.md  CI_CD_FIX_RESULTS.md  CLAUDE.md  CRITICAL_FIXES_NEEDED.md  CRITICAL_ROUTING_DISCOVERY.md  DEDICATED_ALB_DEPLOYMENT_GUIDE.md  DEDICATED_ALB_MIGRATION_PLAN.md  DEPENDENCIES.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUES_2025-09-30.md  DEPLOYMENT_README.md  DEPLOYMENT_RESULTS.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_HTTPS_SOLUTION.md  DIAGNOSTIC_REPORT.md  DISABLED_TESTS_AUDIT.md  DNS_RESOLVER_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_MAP.md  Dockerfile.api  Dockerfile.api.minimal  Dockerfile.api.tmp  Dockerfile.mlflow  Dockerfile.patch  ECS_DEPLOYMENT_STATUS.md  (+206 more)
.claude/: settings.local.json
cli/: Makefile  README.md  example_config.yaml  requirements.txt  setup.py
hokusai-ml-platform/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-test.txt
hokusai-ml-platform/docs/: AUTHENTICATION.md  installation.md  mlflow_authentication.md  troubleshooting.md
hokusai-ml-platform/examples/: authentication_example.py  complete_registration_example.py  pipeline_integration_example.py  tokenized_registry_example.py
hokusai-ml-platform/examples/basic_usage/: README.md  example.py  requirements.txt
hokusai-ml-platform/features/upgrade-mlflow-2.9.2-to-3.4.0/: TEST_RESULTS.md
hokusai-ml-platform/src/hokusai/: __init__.py  _lazy.py  cli.py  config.py  exceptions.py
hokusai-ml-platform/src/hokusai/auth/: __init__.py  client.py  config.py  exceptions.py
hokusai-ml-platform/src/hokusai/config/: __init__.py  mlflow_auth.py  mlflow_setup.py
hokusai-ml-platform/src/hokusai/core/: __init__.py  ab_testing.py  inference.py  mlflow_rest_store.py  models.py  notification.py  registry.py  versioning.py
hokusai-ml-platform/src/hokusai/tracking/: __init__.py  experiments.py  performance.py
hokusai-ml-platform/tests/: conftest.py  test_authentication_fix.py  test_cli.py  test_mlflow_auth_fix.py  test_modular_install.py  test_package_installation.py  test_third_party_registration.py
hokusai-ml-platform/tests/core/: test_ab_testing.py  test_inference.py  test_models.py  test_registry.py  test_versioning.py
hokusai-ml-platform/tests/integration/: test_tokenized_registry_integration.py
hokusai-ml-platform/tests/tracking/: test_tracking_components.py
hokusai-ml-platform/tests/unit/: test_auth_error_messages.py  test_cli_register_notification.py  test_cli_site_notification.py  test_mlflow_setup.py  test_registry_notification.py  test_tokenized_registry.py
(+1131 files in other folders)
