[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hokusai-ml-platform"
version = "1.0.0"
description = "Hokusai ML Platform - Unified MLOps infrastructure for model management and tracking"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Hokusai Team", email = "team@hokus.ai"},
]
keywords = [
    "mlops",
    "machine-learning",
    "model-registry",
    "experiment-tracking",
    "ab-testing",
    "hokusai",
    "ml-platform",
    "metaflow",
    "mlflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "mlflow>=2.8.1",
    "metaflow>=2.10.6",
    "redis>=5.0.1",
    "fastapi>=0.104.1",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
gtm = [
    "transformers>=4.36.0",
    "xgboost>=2.0.2",
    "pinecone-client>=2.2.4",
]
pipeline = [
    "pyarrow>=14.0.1",
    "boto3>=1.28.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "build>=1.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/Hokusai-protocol/hokusai-data-pipeline"
Documentation = "https://docs.hokus.ai"
Repository = "https://github.com/Hokusai-protocol/hokusai-data-pipeline"
Issues = "https://github.com/Hokusai-protocol/hokusai-data-pipeline/issues"
Changelog = "https://github.com/Hokusai-protocol/hokusai-data-pipeline/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=hokusai --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true